Photo stream and newsletter signup footer pieces are now hidden on tablets and phones

--- a/content/_layout/footer.slim
+++ b/content/_layout/footer.slim
@@ -41,7 +41,7 @@ Layout: false
 
           Don't doom your site to inevitable instabiliy by [using flawed code from the internet](http://nathanaeljones.com/163/20-image-resizing-pitfalls/). Our core library is compact, free, and well-tested. `Install-Package ImageResizer`.
 
-      .span3
+      .span3.hidden-tablet.hidden-phone
         h3 Photo Stream
 
         .flickr-widget
@@ -89,7 +89,7 @@ Layout: false
 
         
         
-        form#newsletter method="post" action="https://app.icontact.com/icp/signup.php" name="icpsignup" class="icpsignup2612" accept-charset="UTF-8" onsubmit="return verifyRequired('newsletter');"
+        form#newsletter.hidden-tablet.hidden-phone method="post" action="https://app.icontact.com/icp/signup.php" name="icpsignup" accept-charset="UTF-8" onsubmit="return verifyRequired('newsletter');"
           input type="hidden" name="redirect" value="http://imageresizing.net/newsletter/thankyou"
           input type="hidden" name="errorredirect" value="http://www.icontact.com/www/signup/error.html"
           input type="hidden" name="listid" value="29803"
