--- a/content/index.slim
+++ b/content/index.slim
@@ -105,8 +105,7 @@ hr
 				i.ico-ok.ico-white.circle-color-full
 				.icons-box-vert-info
 					h3 Stop wasting time
-					p Resize, crop, rotate, filter, and tweak images without ever leaving your browser or editor, with a simple API.
-					p Stop managing multiple versions. Stop the endless photoshop-upload-test cycle, and make images the easiest part of your job.
+					p Stop managing multiple versions. Stop the endless photoshop-upload-test cycle. With our simple API, images can be the easiest part of your job. 
 
 				.clear
 		.span4
@@ -132,7 +131,7 @@ hr
 				.icons-box-vert-info
 					h3 Secure and stable
 					markdown:
-						Secure by default, ImageResizer protects againsts DDOS and XSS attacks and minimizes attack surface. 
+						Secure by default, ImageResizer protects againsts DDOS and XSS attacks and minimizes attack surface with a plugin model.
 
 						Unlike most imaging libraries, ImageResizer was designed for server-side use since day 1. Memory leaks are never acceptable &mdash; we design for multi-year uptimes. 
 					
@@ -224,7 +223,7 @@ hr
 					markdown:
 						[We're happy to help you optimize your content architecture](/consult) or assist with installation.  
 
-						We also offer hotfix delivery and support guarantees with our all-inclusive [support contracts](/support/contracts). Support contracts come with free upgrades and includ an enterprise-wide license to all plugins.
+						We also offer hotfix delivery and support guarantees with our all-inclusive [support contracts](/support/contracts). Support contracts come with free upgrades and include an enterprise-wide license to all plugins.
 
 				.clear
 	.clear
