Rewrote the creative edition page

--- a/content/plugins/editions/creative.slim
+++ b/content/plugins/editions/creative.slim
@@ -7,15 +7,26 @@ Includes Editions: free, performance
 
 h1 Creative Edition
 
-markdown:
-  This bundle gives you tremendous flexibility for a very low price point. The Watermark and SimpleFilters plugins are medium-trust compatible.
+slim
 
-  - Get a 2-4x speed boost by using WIC instead of GDI (requires full trust)
-  - Go nuts with your RAW files, PSD files, and apply advanced filters you'd only expect from Photoshop.
-  - Overlay (or underlay) multiple text and image layers with the Watermark plugin - anything is possible.
-  - Auto-trim your product photos with WhitespaceTrimmer, or use SeamCarving to magically change the aspect ratio of images by slicing seams of pixels from background (low-energy) areas of the image.
+p With the Creative Edition, you have access to a comprehensive imaging suite. 
 
+ul.arrow_list
+  li Bring clarity to your photos with the unsharp mask, white balance adjustment, and noise removal tools. 
+  li Apply sophisticated filters to give your photos the right look. 
+  li Design multiple text and image overlays, backgroungs, and watermarks for branding purposes. 
+
+  li: markdown: Trim excess whitespace from your product photos - automatically.
+
+  li Change image aspect ratio - without distorion or cropping - with engery-aware seam carving.
+
+  li Process RAW, CR2, NEF, and PSD files from your web browser.
+
+  li Get a 2-4x speed boost with the WicBuilder pipeline, for a slight quality penalty.
+
+markdown: 
   When purchased as the Creative Edition (under the [Domain license](/licenses/domain)), you are allowed to use the plugins on a registered domain and any subdomains. If you choose to use the floating registration method, you can change domains at any time.
   If purchased with the Elite Edition or Support Contracts, you do not need to register your domains.
+  Only the Watermark and SimpleFilters plugins are medium-trust compatible.
 
 == partial :my_plugins, options
