Added client logos, deleted placeholders. Split "How to" into two different sections

--- a/content/css/style.css
+++ b/content/css/style.css
@@ -1123,7 +1123,7 @@ input[type="button"] {
 	overflow: hidden;
 	border-right: 1px solid #f6f6f6;
 	margin-left: 1px;
-	
+	line-height:144px;
 }
 
 .clients-carousel ul.clients {
