--- a/content/css/less/responsive.less
+++ b/content/css/less/responsive.less
@@ -1,8 +1,11 @@
-/*
- * Drive Responsive Stylesheet using Bootstrap v2.2.1
+/*!
+ * Bootstrap Responsive v2.3.0
  *
- * Copyright 2012 Falcon Creative Studio, Inc
+ * Copyright 2012 Twitter, Inc
+ * Licensed under the Apache License v2.0
+ * http://www.apache.org/licenses/LICENSE-2.0
  *
+ * Designed and built with all the love in the world @twitter by @mdo and @fat.
  */
 
 
@@ -37,3 +40,9 @@
 // Phones to portrait tablets and narrow desktops
 @import "bootstrap/responsive-767px-max.less";
 
+
+// RESPONSIVE NAVBAR
+// ------------------
+
+// From 979px and below, show a button to toggle navbar contents
+@import "bootstrap/responsive-navbar.less";
