--- a/content/css/less/variables.less
+++ b/content/css/less/variables.less
@@ -6,58 +6,6 @@
 // Global values
 // --------------------------------------------------
 
-//My Custom Variables
-//-------------------
-
-// orange (default)			: 	#ed5f30, (rgb(237, 95, 48));
-// Blue Bell				: 	#8D95C3, (rgb(141, 149, 195);
-// Blumine Blue				: 	#1C4A72, (rgb(28, 74, 114));
-// Boston Blue 				: 	#3d82b1, (rgb(61,130,177));
-// San Marino Blue			: 	#426195, (rgb(66, 97, 149));
-// Havelock Blue			:	#468ACE, (rgb(70, 138, 206));
-
-// Tapestry (pink) 			: 	#b15596, (rgb(177,85,150); 
-// Viola					: 	#CF87C1, (rgb(207, 135, 193);
-
-// Jelly Bean magenta		: 	#28778e, (rgb(40, 119, 142));
-
-// Crimson red				: 	#D61646, (rgb(214, 22, 70)); 
-// Persian Red 				:	#CC3333, (rgb(204, 51, 51));
-// Flame Pea Orange			:	#E06338, (rga(224, 99, 56));
-
-// Well Read(choco)			: 	#B1353C, (rgb(177, 53, 60));
-// Copper Brown				: 	#B07838, (rgb(176, 120, 56));
-
-// Surfie Green				: 	#118D78, (rgb(17, 141, 120));
-// Viridian Green			: 	#3B8F64, (rgb(59, 143, 100));
-// Forest Green				: 	#397028, (rgb(57, 112, 40));
-// Highland Green			: 	#679367, (rgb(103, 147, 103));
-
-// Deluge(voilet)			: 	#8062B1, (rgb(128, 98, 177));
-// Comet voilet				:	#555682, rgb(85, 86, 130);
-// Lavender Purple			:	#9D8CBA, rgb(157, 140, 186);
-
-
-
-// -----------Orange Theme--------------
-@baseColor: #ed5f30;
-@baseColorRGBA: rgba(237, 95, 48, .92);
-@formFocusColor: rgba(237, 95, 48, .5);
-
-@bodyColor: #4d4d4d;
-@themeGrey: #b2b2b2;
-@themeBorder: #e5e5e5;
-
-//button colors
-@btnPri: @baseColor;
-
-//Fonts
-@mainFont:"nexa_500",Tahoma, Geneva, sans-serif;
-@blogPostTitle: 20px;
-
-//---- Margin ----
-@secMarginTop: 0px;
-@secMarginBottom: 30px;
 
 // Grays
 // -------------------------
@@ -72,7 +20,7 @@
 
 // Accent colors
 // -------------------------
-@blue:                  #ed5f30;
+@blue:                  #049cdb;
 @blueDark:              #0064cd;
 @green:                 #46a546;
 @red:                   #9d261d;
@@ -90,24 +38,24 @@
 
 // Links
 // -------------------------
-@linkColor:             @baseColor;
-@linkColorHover:        @grayDarker;
+@linkColor:             #08c;
+@linkColorHover:        darken(@linkColor, 15%);
 
 
 // Typography
 // -------------------------
-@sansFontFamily:        "museo_sans_500","Helvetica Neue", Helvetica, Arial, sans-serif;
+@sansFontFamily:        "Helvetica Neue", Helvetica, Arial, sans-serif;
 @serifFontFamily:       Georgia, "Times New Roman", Times, serif;
 @monoFontFamily:        Monaco, Menlo, Consolas, "Courier New", monospace;
 
-@baseFontSize:          12px;
+@baseFontSize:          14px;
 @baseFontFamily:        @sansFontFamily;
-@baseLineHeight:        21px;
+@baseLineHeight:        20px;
 @altFontFamily:         @serifFontFamily;
 
-@headingsFontFamily:    @mainFont;
-@headingsFontWeight:    normal;    // instead of browser default, bold
-@headingsColor:         #333;
+@headingsFontFamily:    inherit; // empty to use BS default, @baseFontFamily
+@headingsFontWeight:    bold;    // instead of browser default, bold
+@headingsColor:         inherit; // empty to use BS default, @textColor
 
 
 // Component sizing
@@ -120,11 +68,11 @@
 
 @paddingLarge:          11px 19px; // 44px
 @paddingSmall:          2px 10px;  // 26px
-@paddingMini:           1px 6px;   // 24px
+@paddingMini:           0 6px;   // 22px
 
-@baseBorderRadius:      3px;
-@borderRadiusLarge:     5px;
-@borderRadiusSmall:     2px;
+@baseBorderRadius:      4px;
+@borderRadiusLarge:     6px;
+@borderRadiusSmall:     3px;
 
 
 // Tables
@@ -138,10 +86,10 @@
 // -------------------------
 @btnBackground:                     @white;
 @btnBackgroundHighlight:            darken(@white, 10%);
-@btnBorder:                         #bbb;
+@btnBorder:                         #ccc;
 
-@btnPrimaryBackground:              lighten(@btnPri, 3%);
-@btnPrimaryBackgroundHighlight:     darken(@btnPrimaryBackground, 10%);
+@btnPrimaryBackground:              @linkColor;
+@btnPrimaryBackgroundHighlight:     spin(@btnPrimaryBackground, 20%);
 
 @btnInfoBackground:                 #5bc0de;
 @btnInfoBackgroundHighlight:        #2f96b4;
@@ -178,7 +126,7 @@
 
 @dropdownLinkColor:             @grayDark;
 @dropdownLinkColorHover:        @white;
-@dropdownLinkColorActive:       @dropdownLinkColor;
+@dropdownLinkColorActive:       @white;
 
 @dropdownLinkBackgroundActive:  @linkColor;
 @dropdownLinkBackgroundHover:   @dropdownLinkBackgroundActive;
@@ -203,7 +151,7 @@
 
 // Sprite icons path
 // -------------------------
-@iconSpritePath:          "../../img/glyphicons-halflings.png";
+@iconSpritePath:          "../img/glyphicons-halflings.png";
 @iconWhiteSpritePath:     "../img/glyphicons-halflings-white.png";
 
 
@@ -324,16 +272,16 @@
 // Default 940px grid
 // -------------------------
 @gridColumns:             12;
-@gridColumnWidth:         50px;
-@gridGutterWidth:         30px;
+@gridColumnWidth:         60px;
+@gridGutterWidth:         20px;
 @gridRowWidth:            (@gridColumns * @gridColumnWidth) + (@gridGutterWidth * (@gridColumns - 1));
 
 // 1200px min
-@gridColumnWidth1200:     60px;
+@gridColumnWidth1200:     70px;
 @gridGutterWidth1200:     30px;
 @gridRowWidth1200:        (@gridColumns * @gridColumnWidth1200) + (@gridGutterWidth1200 * (@gridColumns - 1));
 
-// 768px-940px
+// 768px-979px
 @gridColumnWidth768:      42px;
 @gridGutterWidth768:      20px;
 @gridRowWidth768:         (@gridColumns * @gridColumnWidth768) + (@gridGutterWidth768 * (@gridColumns - 1));
