Updated mindrevolution logo

--- a/content/index.slim
+++ b/content/index.slim
@@ -290,7 +290,7 @@ h3 Who uses ImageResizer?
   ul.slides.clients
     li: img src="http://upload.wikimedia.org/wikipedia/commons/thumb/f/f4/Microsoft.svg/200px-Microsoft.svg.png"
     li: img src="http://upload.wikimedia.org/wikipedia/commons/thumb/4/48/EBay_logo.png/320px-EBay_logo.png"
-    li: img src="http://mindrevolution.com/css/mindrevolution-logo.png"
+    li: img src="/img/logos/logo_mindrevolution_black.png"
     li: img src="http://s.stpost.com/img/sierra-logo.gif"
     li: img src="http://www.eksponent.com/Content/images/logo.png"
     li: img src="/img/logos/repzio-logo-144.gif"
