Migrated to .less, changed parallax-slider

--- a/content/css/less/site.less
+++ b/content/css/less/site.less
@@ -1,7 +1,18 @@
 
-@import "fonts";
-@import "font-awesome";
-@import "bootstrap";
-@import "style";
-@import "color";
-@import "responsive";
+@imgbase: "../../img/";
+
+@import "bootstrap.less";
+@import "responsive.less";
+
+@import "glyphicons.less";       /* Icons. */
+@import "glyphicons-color.less";     /* Icons. */  
+@import "social-icons.less";    /* Social Icons */
+@import "hover.less";       /* Hover CSS3 Effect */
+@import "fancybox.less";      /* Fancybox */
+
+
+
+@import "smart";
+
+
+@import "custom";
