--- a/content/css/less/variables.less
+++ b/content/css/less/variables.less
@@ -38,7 +38,7 @@
 
 // Links
 // -------------------------
-@linkColor:             #08c;
+@linkColor:             #0088cc;
 @linkColorHover:        darken(@linkColor, 15%);
 
 
@@ -151,8 +151,8 @@
 
 // Sprite icons path
 // -------------------------
-@iconSpritePath:          "../img/glyphicons-halflings.png";
-@iconWhiteSpritePath:     "../img/glyphicons-halflings-white.png";
+@iconSpritePath:          "@{imgbase}glyphicons-halflings.png";
+@iconWhiteSpritePath:     "@{imgbase}glyphicons-halflings-white.png";
 
 
 // Input placeholder text color
