--- a/content/_layout/layout.slim
+++ b/content/_layout/layout.slim
@@ -20,17 +20,11 @@ html(lang="en" class="no-js")
 
     meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"
   
-    link href="/css/bootstrap.css" rel="stylesheet"
-    link href="/css/bootstrap-responsive.css" rel="stylesheet"
-    link href="/css/style.css" rel="stylesheet"
-    link href="/css/parallax-slider.css" rel="stylesheet"
-    link href="/css/custom.css" rel="stylesheet"
-    link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans:400,700"
-    link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Serif"
-    link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Boogaloo"
-    link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Economica:700,400italic"
+    link href="/css/less/site.css" rel="stylesheet"
+    link href="/css/parallax-slider3.css" rel="stylesheet"
 
-    
+    link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700|Economica:700,400italic|Droid+Serif|Boogaloo' 
+
     /[if lt IE 9]
       script src="http://html5shim.googlecode.com/svn/trunk/html5.js"
     /[if IE 9]
