--- a/content/css/less/bootstrap.less
+++ b/content/css/less/bootstrap.less
@@ -1,5 +1,5 @@
 /*!
- * Bootstrap v2.2.2
+ * Bootstrap v2.3.0
  *
  * Copyright 2012 Twitter, Inc
  * Licensed under the Apache License v2.0
@@ -7,6 +7,7 @@
  *
  * Designed and built with all the love in the world @twitter by @mdo and @fat.
  */
+
 
 // CSS Reset
 // Core variables and mixins
@@ -52,12 +53,12 @@
 
 // Components: Misc
 @import "bootstrap/thumbnails.less";
-//@import "bootstrap/media.less";
+@import "bootstrap/media.less";
 @import "bootstrap/labels-badges.less";
 @import "bootstrap/progress-bars.less";
-//@import "bootstrap/accordion.less";
-//@import "bootstrap/carousel.less";
-//@import "bootstrap/hero-unit.less";
+@import "bootstrap/accordion.less";
+@import "bootstrap/carousel.less";
+@import "bootstrap/hero-unit.less";
 
 // Utility classes
 @import "bootstrap/utilities.less"; // Has to be last to override when necessary
