Switched to aqua theme

--- a/content/css/less/custom.less
+++ b/content/css/less/custom.less
@@ -13,9 +13,11 @@
 }
 
 
-#page-title {
-  background-image: none;
-  background-color: #999;
+#page-title-inner {
+  background: none;
+  filter:none;
+  background-color: @blue;
+
 }
 
 
