--- a/content/css/less/smart.less
+++ b/content/css/less/smart.less
@@ -11,7 +11,7 @@
 
 @o-text-color: #666;
 
-@o-accent-color: red;//#29a9df;
+@o-accent-color: @blue;//#29a9df;
 
 html { -webkit-font-smoothing: antialiased; }
 
