--- a/content/css/less/variables.less
+++ b/content/css/less/variables.less
@@ -20,8 +20,8 @@
 
 // Accent colors
 // -------------------------
-@blue:                  #049cdb;
-@blueDark:              #0064cd;
+@blue:                  #00aec4; //#049cdb;
+@blueDark:              darken(@blue, 15%);//#0064cd;
 @green:                 #46a546;
 @red:                   #9d261d;
 @yellow:                #ffc40d;
@@ -38,7 +38,7 @@
 
 // Links
 // -------------------------
-@linkColor:             #0088cc;
+@linkColor:             @blue;//#0088cc;
 @linkColorHover:        darken(@linkColor, 15%);
 
 
