Switched accent color to 00aec4

--- a/content/css/less/variables.less
+++ b/content/css/less/variables.less
@@ -20,7 +20,7 @@
 
 // Accent colors
 // -------------------------
-@blue:                  #00aed4; //#049cdb;
+@blue:                  #00aec4; //#049cdb;
 @blueDark:              darken(@blue, 15%);//#0064cd;
 @green:                 #46a546;
 @red:                   #9d261d;
