Refactored licenses page - agreement links are in header, details below.

--- a/content/css/less/custom.less
+++ b/content/css/less/custom.less
@@ -20,6 +20,10 @@
 
 }
 
+#page-title-inner a{
+  color:white;
+}
+
 
 form#newsletter{
   padding-left:0;
@@ -43,3 +47,6 @@ div.site-subheader{
 
 /* Search page tweaks */
 .gsc-control-cse {background-color:inherit; border:0;}
+
+
+
