Removed bxSlider include from home page, added PMG Austin logo, reordered logos

--- a/content/index.slim
+++ b/content/index.slim
@@ -1,7 +1,6 @@
 Menu: home
 Title: ASP.NET Image Resizing, Cropping, & Upload Module for IIS - Free & Open Source - MVC compatible
-Libs: uservoice, plusone, bxSlider, -comments
-Banner: banners_content
+Libs: uservoice, plusone, -comments
 Aliases: )
 Layout: layout
 
@@ -288,12 +287,13 @@ hr
 h3 Who uses ImageResizer?
 .clients-carousel
   ul.slides.clients
-    li: img src="http://upload.wikimedia.org/wikipedia/commons/thumb/f/f4/Microsoft.svg/200px-Microsoft.svg.png"
-    li: img src="http://upload.wikimedia.org/wikipedia/commons/thumb/4/48/EBay_logo.png/320px-EBay_logo.png"
     li: img src="/img/logos/logo_mindrevolution_black.png"
     li: img src="http://s.stpost.com/img/sierra-logo.gif"
     li: img src="http://www.eksponent.com/Content/images/logo.png"
+    li: img src="/img/logos/pmg-austin.png"
     li: img src="/img/logos/repzio-logo-144.gif"
+    li: img src="http://upload.wikimedia.org/wikipedia/commons/thumb/f/f4/Microsoft.svg/200px-Microsoft.svg.png"
+    li: img src="http://upload.wikimedia.org/wikipedia/commons/thumb/4/48/EBay_logo.png/320px-EBay_logo.png"
     li: img src="/img/logos/publishgreen.png"
     li: img src="/img/logos/flavorplate.png"
     li: img src="/img/logos/MizuniLogoR_933x216.png"
