Reorderd license links by popularity

--- a/content/licenses/index.slim
+++ b/content/licenses/index.slim
@@ -15,20 +15,21 @@ h1 Licenses
             h2
               i.ico-white.ico-notes
               | Licenses
-          .span2
+          .span4
             markdown: 
               * [Resizer Freedom (**Essential**)](/licenes/freedom)
-              * [PdfRenderer license](/licenses/pdfrenderer)
-              * [Resizer Trial License](/licenses/trial)
-          .span4
+              * [Resizer Domain (**Performance** and **Creative**)](/licenses/domain)
+              * [Resizer Enterprise (**Elite** and **Support Contracts**)](/licenses/enterprise)
+
+          .span2
             markdown:
-               * [Resizer Domain (For **Performance** and **Creative**)](/licenses/domain)
-               * [Resizer Enterprise (For **Elite** and support contracts)](/licenses/enterprise)
-               * [Resizer OEM (for resale and bundling)](/licenses/oem)
+              * [PdfRenderer License](/licenses/pdfrenderer)
+              * [Resizer Trial License](/licenses/trial)
+              * [Resizer OEM License](/licenses/oem)
                
           .span3
             markdown: 
-              * [Resizer Professional Client (EULA for redistribution)](/licenses/proclient)
+              * [Professional Client (redist EULA)](/licenses/proclient)
               * [Resizer Professional (discontinued)](/licenses/pro)
               * [Imazen Contributor Agreement](/licenses/contribute)
 
