Updated flexslider, fixed padding for company logo list

--- a/content/css/less/custom.less
+++ b/content/css/less/custom.less
@@ -12,6 +12,11 @@
   padding-top:7px;
 }
 
+ul.slides.clients li{ 
+  padding-left:10px; 
+  padding-right:10px;
+  max-width:164px;
+}
 
 #page-title-inner {
   background: none;
