Added font-awesome site wide, removed useless glyphicons-color

--- a/content/css/less/site.less
+++ b/content/css/less/site.less
@@ -3,10 +3,12 @@
 
 @import "bootstrap.less";
 @import "responsive.less";
+@import "font-awesome.less";
 
-@import "glyphicons.less";       /* Icons. */
-@import "glyphicons-color.less";     /* Icons. */  
+@import "glyphicons.less";    /* Social Icons */
+
 @import "social-icons.less";    /* Social Icons */
+
 @import "hover.less";       /* Hover CSS3 Effect */
 @import "fancybox.less";      /* Fancybox */
 
